# victory-archive

./: .gitignore  Cargo.toml  README.md  package.json
.devcontainer/: devcontainer.json
.github/workflows/: coverage.yml  rust.yml
src/: batch.rs  executor.rs  file.rs  lib.rs  main.rs  plan.rs
src/destination/: filesystem_dest.rs  mod.rs
src/middleware/: mod.rs
src/trigger/: mod.rs
src/utils/: file_utils.rs
tests/: file_tests.rs
