[package]
name = "victory-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
log = "0.4.17"
memory-stats = "1.1.0"
num-format = "0.4.4"
serde = {version="1.0.163", features = ["derive"]}
serde_yaml = "0.9.21"
simplelog = "0.12.1"
tempfile = "3.5.0"
walkdir = "2.3.3"

[lib]

[[bin]]
name = "discover"